Video Components Page Fix

--- a/src/components/pages/video-modal-components.twig
+++ b/src/components/pages/video-modal-components.twig
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="paragraph-widget paragraph-widget--callout-inset">
-      {% include "@feature-with-large-image-and-intro--video" with callout_inset %}
+      {% include "@feature-with-large-image-and-intro--video" with feature_with_large_image_and_intro %}
     </div>
     <div class="paragraph-widget paragraph-widget--callout-inset">
       {% include "@feature-with-large-image-and-intro--video-links" with callout_inset %}
