--- a/src/components/button-set/button-set.twig
+++ b/src/components/button-set/button-set.twig
@@ -5,7 +5,8 @@
         {% if item.url %}
           <a class="iastate22-button" href="{{ item.url }}">{{ item.text }}<span class="arrow"></span></a>
         {% elseif item.video %}
-            {% include "@button--video" with item.video %}
+          {% set video = item.video %}
+            {% include "@button--video" with video %}
         {% endif %}
       </li>
     {% endfor %}
