Last config button fixed

--- a/src/components/feature-with-large-image-and-intro/feature-with-large-image-and-intro--video.twig
+++ b/src/components/feature-with-large-image-and-intro/feature-with-large-image-and-intro--video.twig
@@ -3,5 +3,5 @@
     <h2 class="callout-inset_inset-headline">{{title}}</h2>
     <div class="text-content">{{intro_text|raw}}</div>
   </div>
-  {% include "@feature-with-large-image--video" with feature_with_large_image %}
+  {% include "@feature-with-large-image--video-embed" %}
 </div>
