--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -52,6 +52,7 @@
 @import "../components/subnav/subnav";
 @import "../components/full-width-image/full-width-image";
 @import "../components/call-to-action/call-to-action";
+@import "../components/image-collage/image-collage";
 @import "../components/image-grid/image-grid";
 @import "../components/image-grid-with-text/image-grid-with-text";
 @import "../components/stat/stat";
