Image Gallery Template, base level setup

--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -20,6 +20,7 @@ $iastate-red: #c8102e;
 $iastate-maroon: #7c2529;
 $iastate-gold: #f1be48;
 $iastate-purple: #ed23ce;
+$border-gold: #eabf5e;
 
 /* Fonts
    ========================================================================== */
