--- a/src/components/image-gallery/_image-gallery.scss
+++ b/src/components/image-gallery/_image-gallery.scss
@@ -15,15 +15,49 @@
 .image-gallery__item {
   position: relative;
   overflow: hidden;
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: rem(5);
+    background: $iastate-gold;
+    opacity: 0;
+    left: 0;
+    transition: opacity 0.3s ease-out;
+    z-index: 3;
+  }
+
+  &:before {
+    top: 0;
+  }
+
+  &:after {
+    bottom: 0;
+  }
 
   &:hover,
   &:focus-within {
-    .image-gallery__image-contact {
-      border-color: $border-gold;
-      transition: border-color 0.2s ease-out;
+    &:before,
+    &:after {
+      opacity: 1;
+      transition: opacity 0.2s ease-out;
     }
 
-    .image-gallery__console .icon {
+    .image-gallery__item-wrap {
+      &:before,
+      &:after {
+        opacity: 1;
+        transition: opacity 0.2s ease-out;
+      }
+    }
+
+    .image-gallery__image-wrap > img {
+      transition: transform 0.2s ease-out;
+      transform: scale(1.1);
+    }
+
+    .image-gallery__console > .icon {
       opacity: 0;
       transition: opacity 0.2s ease-out;
     }
@@ -31,13 +65,37 @@
     .image-gallery__console {
       width: 100%;
       grid-template-rows: 1fr;
+      transition: grid-template-rows 0.2s ease-out, width 0.2s ease-out;
     }
 
     .image-gallery__console-wrap {
       opacity: 1;
       transform: translateY(0);
-      transition: transform 0.2s 0.3s ease-in-out, opacity 0.2s 0.3s ease-in-out;
+      transition: transform 0.2s 0.3s ease-out, opacity 0.2s 0.3s ease-out;
     }
+  }
+}
+
+.image-gallery__item-wrap {
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    width: rem(5);
+    height: 100%;
+    background: $iastate-gold;
+    opacity: 0;
+    top: 0;
+    transition: opacity 0.3s ease-out;
+    z-index: 3;
+  }
+
+  &:before {
+    left: 0;
+  }
+
+  &:after {
+    right: 0;
   }
 }
 
@@ -50,6 +108,8 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    transform: scale(1);
+    transition: transform 0.3s ease-out;
   }
 }
 
@@ -58,9 +118,8 @@
   inset: 0;
   cursor: pointer;
   background-color: transparent;
-  border: solid rem(5) rgba($border-gold, 0);
-  transition: border-color 0.3s ease-out;
-  z-index: 2;
+  z-index: 1;
+  border: none;
 }
 
 .image-gallery__console {
@@ -69,20 +128,19 @@
   bottom: 0;
   right: 0;
   padding: rem(20);
-  z-index: 1;
+  z-index: 2;
   width: rem(40);
   height: auto;
   display: grid;
   grid-template-rows: 0fr;
-  transition: grid-template-rows 0.3s ease-out, width 0.3s ease-out;
+  transition: grid-template-rows 0.3s 0.2s ease-out, width 0.3s 0.2s ease-out;
 
-  .icon {
+  > .icon {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    bottom: rem(6);
+    right: rem(12);
     opacity: 1;
-    transition: opacity 0.3s ease-out;
+    transition: opacity 0.3s 0.5s ease-out;
   }
 }
 
@@ -96,5 +154,15 @@
   transform: translateY(100%);
   overflow: hidden;
   opacity: 0;
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  gap: rem(28);
+  transition: transform 0.3s ease-in-out, opacity 0.2s ease-in-out, width 0.3s ease-in-out;
+
+  > button,
+  > a {
+    position: relative;
+    z-index: 10;
+    height: rem(45);
+  }
 }
