--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -18,6 +18,11 @@
   justify-content: center;
   align-items: center;
   background: rgba($white, 0.9);
+
+  .iastate22-modal--image-download & {
+    backdrop-filter: blur(rem(9));
+    background: rgba($white, 0.95);
+  }
 }
 
 .iastate22-modal__container {
@@ -39,7 +44,15 @@
     width: 100%;
   }
 
-  .iastate22-modal--with-video & {
+  .iastate22-modal--image-download & {
+    width: 100%;
+    position: unset;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .iastate22-modal--with-video &,
+  .iastate22-modal--image-download & {
     @include media-breakpoint-up(md) {
       padding: rem(45) rem(45) 0;
     }
@@ -50,7 +63,8 @@
       align-items: flex-start;
       flex-wrap: wrap;
 
-      .iastate22-modal--with-video & {
+      .iastate22-modal--with-video &,
+      .iastate22-modal--image-download & {
         flex-direction: column;
         flex-wrap: nowrap;
       }
@@ -71,7 +85,8 @@
     width: 100%;
     padding: rem(45) rem(75) rem(45) rem(54);
 
-    .iastate22-modal--with-video & {
+    .iastate22-modal--with-video &,
+    .iastate22-modal--image-download & {
       padding: rem(24) 0 rem(45);
     }
   }
@@ -79,13 +94,20 @@
     @include media-breakpoint-up(md) {
       width: 64%;
 
-      .iastate22-modal--with-video & {
+      .iastate22-modal--with-video &,
+      .iastate22-modal--image-download & {
         width: 100%;
       }
     }
   }
   .iastate22-modal__content-cta {
     margin-top: rem(20);
+  }
+
+  .iastate22-modal--image-download & {
+    p {
+      font-style: italic;
+    }
   }
 }
 
@@ -123,6 +145,13 @@
       font-size: rem(30);
     }
   }
+
+  .iastate22-modal--image-download & {
+    @include media-breakpoint-up(lg) {
+      top: rem(60);
+      right: rem(80);
+    }
+  }
 }
 
 .iastate22-modal__media {
@@ -131,7 +160,8 @@
     flex: 0 1 auto;
     width: 36%;
 
-    .iastate22-modal--with-video & {
+    .iastate22-modal--with-video &,
+    .iastate22-modal--image-download & {
       width: 100%;
       flex: 0 0 100%;
     }
@@ -139,8 +169,19 @@
   &:before {
     padding-top: 100%;
 
-    .iastate22-modal--with-video & {
+    .iastate22-modal--with-video &,
+    .iastate22-modal--image-download & {
       display: none;
+    }
+  }
+
+  .iastate22-modal--image-download & {
+    aspect-ratio: initial;
+    > img {
+      position: relative;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
     }
   }
 }
@@ -179,5 +220,33 @@
   }
 
   .video-embed {
+  }
+}
+
+.iastate22-modal--image-download .iastate22-modal__media .iastate22-button {
+  position: absolute;
+  bottom: rem(32);
+  right: rem(32);
+  margin-bottom: 0;
+
+  @include media-breakpoint-down("lg") {
+    padding: rem(8) rem(13.5);
+  }
+
+  .text {
+    color: $iastate-maroon;
+
+    @include media-breakpoint-down("lg") {
+      display: none;
+    }
+  }
+
+  .icon {
+    @include media-breakpoint-down("lg") {
+      position: relative;
+      padding-left: 0;
+      right: 0;
+      bottom: 0;
+    }
   }
 }
