--- a/src/components/pages/Main University Site/main-site-kitchen-sink.twig
+++ b/src/components/pages/Main University Site/main-site-kitchen-sink.twig
@@ -321,6 +321,14 @@
     </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
+        <h2>Home Social</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--home-social-follow">
+      {% include "@home-social--follow" %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
         <h2>3 Cards—no Images and Links</h2>
       </div>
     </div>
