Removed Nimbus Sans - font was not renewed

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -1,38 +1,6 @@
 /* Font Declarations
 ========================================================================== */
-
-@font-face {
-  font-family: "Nimbus Sans";
-  src: url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-Reg.woff") format("woff"),
-    url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-Reg.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Nimbus Sans";
-  src: url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-RegIta.woff") format("woff"),
-    url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-RegIta.ttf") format("truetype");
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Nimbus Sans";
-  src: url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-Bol.woff") format("woff"),
-    url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-Bol.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Nimbus Sans";
-  src: url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-BolIta.woff") format("woff"),
-    url("https://cdn.theme.iastate.edu/fonts/NimbusSanL-BolIta.ttf") format("truetype");
-  font-style: italic;
-  font-weight: 700;
-  font-display: swap;
-}
+/* Nimbus sans was not renewed */
 
 /* Base Styles
 ========================================================================== */
