--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -24,7 +24,7 @@ $border-gold: #eabf5e;
 
 /* Fonts
    ========================================================================== */
-$typeface-sans-serif: "Nimbus Sans", sans-serif;
+$typeface-sans-serif: "Arial", "Helvetica Neue", sans-serif;
 $typeface-serif: "Merriweather", serif;
 $font-size-root: 16px;
 
