--- a/src/scss/_core/_editor.scss
+++ b/src/scss/_core/_editor.scss
@@ -108,7 +108,7 @@ h6 {
 
 .wp-caption p.wp-caption-text {
   margin-top: 0.5rem;
-  font-family: "Nimbus Sans", sans-serif;
+  font-family: "Arial", "Helvetica Neue", sans-serif;
   font-style: italic;
   font-size: 1rem;
   line-height: 1.625;
